0.0.10
  - Added new PDF::Tags::Reader dependency. regenerated.

0.0.9
  - Factored out data mining logic to new PDF::Tags module. Replaced
    script pdf-dom-dump.raku with pdf-tag-dump.raku