@@ -1,3 +1,8 @@
+{{$NEXT}}
+  - Remove PDF32000_2008.pdf from source-tree and distribution. Now fetched
+    via wget
+  - Upload to zef ecosystem
+
 0.0.10
   - Added new PDF::Tags::Reader dependency. regenerated.
 
